# greenboot-rs

./: .gitignore  .packit.yaml  Cargo.toml  LICENSE  Makefile  README.md  greenboot-rs.spec  greenboot.spec
.github/: spellcheck-ignore
.github/workflows/: analysis.yml  ci.yml  comment-ci.yaml  greenboot-ci.yaml
etc/greenboot/: greenboot.conf
grub2/: 08_greenboot.cfg
src/: main.rs
src/lib/: greenboot.rs  grub.rs  handler.rs  mod.rs  mount.rs
testing_assets/: failing_binary  grubenv  mounts  passing_binary  passing_script.sh
tests/: greenboot-bootc-anaconda-iso.sh  greenboot-bootc-qcow2.sh  greenboot-bootc.yaml  greenboot-ostree.sh  greenboot-ostree.yaml
tests/files/: centos-stream-9.json  rhel-10-2.repo  rhel-9-8.repo
tmt/plans/: greenboot-test.fmf
usr/lib/systemd/system/: greenboot-healthcheck.service  greenboot-rollback.service  greenboot-set-rollback-trigger.service  greenboot-success.target
