[package]
name = "greenboot"
version = "0.16.2"
edition = "2024"
license = "BSD-3-Clause"

[lib]
name = "greenboot"
path = "src/lib/mod.rs"

[[bin]]
name = "greenboot"
path = "src/main.rs"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
config = "0.15.13"
pretty_env_logger = "0.5.0"
nix = "0.30.1"
glob = "0.3.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"
once_cell = "1.21.3"
tempfile = "3.19.0"
env_logger = "0.10.2"

[features]
default = []
test-remount = []
